syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.velocia.lib";
option java_outer_classname = "HelloProto";

service Hello {
  rpc getHelloMessage(GetHelloMessageRequest) returns (GetHelloMessageResponse) {}
}
message GetHelloMessageRequest {
  string name = 1;
}
message GetHelloMessageResponse {
  string message = 1;
}